<resources>
    <string name="app_name">備品管理アプリ</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_text">備品管理アプリ</string>
    <string name="login_btn_text">ログイン</string>
    <string name="search_name_hint_text">機材名</string>
    <string name="search_type_hint_text">種類</string>
    <string name="search_channel_hint_text">番組名</string>
    <string name="search_username_hint_text">貸出人</string>
    <string name="search_btn_text">検索</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">ホーム</string>
    <string name="menu_create_item">機材登録</string>
    <string name="menu_create_user">ユーザー登録</string>
    <string name="item_create_itemname_hint">機材名を入力してください</string>
    <string name="item_create_itemtype_hint">機材の種類を入力してください</string>
    <string name="create_item_button_text">登録</string>
    <string name="create_user_username_hint">ユーザー名を入力してください</string>
    <string name="create_user_email_hint">Eメールアドレスを入力してください</string>
    <string name="create_user_label_text">権限：</string>
    <string name="create_user_password_hint">パスワードを入力してください</string>
    <string name="create_user_button_text">登録</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rental_btn_text_ok">レンタル</string>
    <string name="rental_btn_text_ng">レンタル中</string>
    <string name="rental_btn_text_return">返却</string>
    <string name="date_text_hint">日付を入力</string>
    <string name="time_text_hint">時刻を入力</string>
    <string name="channel_text_hint">番組名を入力</string>
    <string name="remark_text_hint">備考を入力</string>
</resources>