<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.suggito.rentalApp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_nav_item_list"
            app:destination="@id/nav_item_list" />

    </fragment>

    <fragment
        android:id="@+id/nav_create_item"
        android:name="com.suggito.rentalApp.ui.create_item.CreateItemFragment"
        android:label="@string/menu_create_item"
        tools:layout="@layout/fragment_create_item" />

    <fragment
        android:id="@+id/nav_create_user"
        android:name="com.suggito.rentalApp.ui.create_user.CreateUserFragment"
        android:label="@string/menu_create_user"
        tools:layout="@layout/fragment_create_user" />

    <fragment
        android:id="@+id/nav_item_list"
        android:name="com.suggito.rentalApp.ui.item_list.ItemListFragment"
        android:label="機材一覧"
        tools:layout="@layout/fragment_item_list"
        app:defaultNavHost="true">

        <argument
            android:name="items"
            app:argType="com.suggito.rentalApp.Items[]" />
        <action
            android:id="@+id/action_nav_item_list_to_nav_rental_list"
            app:destination="@id/nav_rental_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_rental_list"
        android:name="com.suggito.rentalApp.ui.rental_list.RentalListFragment"
        android:label="貸出データ一覧"
        tools:layout="@layout/fragment_rental_list" >
        <argument
            android:name="rentals"
            app:argType="com.suggito.rentalApp.Rentals[]" />
        <action
            android:id="@+id/action_nav_rental_list_to_nav_rental_detail"
            app:destination="@id/nav_rental_detail" />
        <argument
            android:name="item"
            app:argType="com.suggito.rentalApp.Items" />
    </fragment>
    <fragment
        android:id="@+id/nav_rental_detail"
        android:name="com.suggito.rentalApp.ui.rental_detail.RentalDetailFragment"
        android:label="レンタル"
        tools:layout="@layout/fragment_rental_detail" >
        <argument
            android:name="item"
            app:argType="com.suggito.rentalApp.Items" />
        <argument
            android:name="rental"
            app:argType="com.suggito.rentalApp.Rentals" />
    </fragment>
</navigation>