<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context=".ui.rental_detail.RentalDetailFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/statusImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ng" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="機材" />

            <TextView
                android:id="@+id/itemNameDetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="ユーザー名" />

            <TextView
                android:id="@+id/userNameDetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="番組名" />

            <EditText
                android:id="@+id/channelDetailEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/channel_text_hint"
                android:inputType="textPersonName"
                android:background="@drawable/edittext_style"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="貸出期間" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/rentalDateDetailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_text_hint"
                    android:inputType="date"
                    android:background="@drawable/edittext_style"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="〜"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/returnDateDetailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_text_hint"
                    android:inputType="date"
                    android:background="@drawable/edittext_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/rentalTimeDetailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:ems="10"
                    android:hint="@string/time_text_hint"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/returnTimeDetailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:ems="10"
                    android:hint="@string/time_text_hint"
                    android:inputType="time" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="イメージ" />

            <ImageView
                android:id="@+id/itemImageDetailImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="備考" />

            <EditText
                android:id="@+id/remarkDetailText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/remark_text_hint"
                android:inputType="textMultiLine"
                android:background="@drawable/edittext_style"/>

            <Button
                android:id="@+id/rentalBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@color/colorRental"
                android:text="@string/rental_btn_text_ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/ic_icon_background" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>